correct the errors in html and fix the contrast.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,11 @@
 /******* Change Box Model ***************/
-*,
+/* *,
 *:before,
 *:after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} */
 
 /******* Body Layout ***************/
 body {
@@ -21,7 +21,7 @@ body {
   margin: 0 auto;
   margin-top: 1rem;
   padding: 0;
-  border: 4px solid #00bcd4;
+  border: 4px solid #387d94;
   /* Blue border wrapping the full content */
   background-clip: padding-box;
 }
@@ -51,7 +51,7 @@ header {
 #tools a {
   font-size: 0.9rem;
   text-transform: uppercase;
-  color: #666;
+  color: #595959;
   text-decoration: none;
 }
 
@@ -102,17 +102,17 @@ h1 {
   background: rgba(255, 255, 255, 0.788);
   backdrop-filter: blur(2px);
   padding: 30px 35px;
-  border: 2px solid #00a6db;
+  border: 2px solid #387d94;
   border-radius: 8px;
   max-width: 350px;
-  color: #00a6db;
+  color: #387d94;
   font-family: Arial, sans-serif;
 }
 
 .hero-text h2 {
   margin: 0 0 15px;
   font-size: 28px;
-  color: #00a6db;
+  color: #387d94;
   font-weight: bold;
 }
 
@@ -125,12 +125,13 @@ h1 {
 
 .hero-text li {
   margin-bottom: 8px;
+  color: #2a5e6f;
 }
 
 .button {
   display: inline-block;
-  background-color: #00a6db;
-  color: black;
+  background-color:#1e6076;
+  color: white;
   padding: 8px 16px;
   font-weight: bold;
   text-decoration: none;
@@ -174,7 +175,7 @@ h1 {
 }
 
 .item {
-  background-color: #00bcd4;
+  background-color: #2a5e6f;
   padding: 0.5rem;
   text-align: center;
 }
@@ -207,7 +208,7 @@ footer {
   border-top: 1px solid #ccc;
   text-align: center;
   font-size: 0.9rem;
-  color: #666;
+  color: #595959;
   background-color: #fff;
 }
 
